# fundkit

./: .coverage  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  TODO.md  app.py  cache.py  cjk_font.py  collect_fees.py  collect_fund_data.py  db.py  dca_backtest.py  fund_catalog.py  fund_data.py  index_fund.py  index_valuation.py  opencode.json  pension_fund.py  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  ruff.toml  valuation.py
.github/workflows/: ci.yml
.opencode/skills/backtest-core/: SKILL.md
.opencode/skills/data-flow/: SKILL.md
.opencode/skills/index-mapping/: SKILL.md
app_pages/: dca.py  fund_query.py  index_fund.py  index_valuation.py  pension_fund.py  valuation.py
backend/: charting.py  cjk_font.py  dca_backtest.py  dca_engine.py  em_fetcher.py  fund_data.py  fund_query.py  index_fetcher.py  index_fund.py  index_valuation.py  logger.py  parse_utils.py  pension_fund.py  stats.py  strategy.py
docs/: README.md  cli.md  code_optimization_analysis.md  code_quality_report.md  collect_fund_data.md  data_source.md  database.md  dca_backtest_cli.md  index_name_map_report.md  known_issues.md  metrics.md  nav_types_analysis.md  optimization_directions.md  overseas_index_mapping.md  strategy_comparison.md  valuation_targets.md
fundkit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_db.py  test_dca_integration.py  test_formatters.py  test_fund_classify.py  test_nav_history_cache.py  test_parse_utils.py  test_stats.py  test_strategy.py
tools/: build_index_name_map.py  cjk_font.py  cnindex_export.py  compare_strategies.py  csi_export.py  find_scenarios.py  formatters.py  gen_name_map_report.py  stats.py
