[project]
name = "fundkit"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "akshare>=1.14.0",
    "pandas>=1.5.0",
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
    "streamlit>=1.30.0",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.0",
    "pytest>=8.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "W", "ANN"]
ignore = ["E501", "ANN002", "ANN003", "ANN204", "ANN401"]
