[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fundkit"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "akshare>=1.14.0",
    "pandas>=1.5.0",
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
    "streamlit>=1.30.0",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.0",
    "pytest>=8.0",
    "pytest-cov>=7.1.0",
    "pyright>=1.1.380",
    "pandas-stubs>=2.0",
    "types-requests>=2.32",
]

[project.scripts]
backtest = "backend.dca_backtest:main"
collect = "collect_fund_data:main"
find-scenarios = "tools.find_scenarios:main"
compare-strategies = "tools.compare_strategies:main"
build-name-map = "tools.build_index_name_map:main"

[tool.setuptools.packages.find]
include = ["backend*", "tools*", "app_pages*"]
[tool.setuptools]
py-modules = ["collect_fund_data", "db", "app"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "W", "ANN"]
ignore = ["E501", "ANN002", "ANN003", "ANN204", "ANN401"]
